[gd_scene load_steps=2 format=3 uid="uid://b54svb1s4kpin"]

[ext_resource type="Script" path="res://Utility/HurtBox/hurt_box.gd" id="1_gn8yt"]

[node name="HurtBox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_gn8yt")

[node name="disableTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="disableTimer" to="." method="_on_timer_timeout"]
